--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
       <img src="./avatar.png" alt="avatar" class="header__avatar" />
       <h1 class="header__title">Игорь Ридтц</h1>
-      <h3 class="header__subtitle">Люблю делиться мыслями и опытом с миром</h3>
+      <h3 class="header__subtitle">Будущий путешественник по миру, в настоящее время профессиональный соня</h3>
     </header>
     <main>
       <section class="links">
@@ -35,11 +35,11 @@
             >
           </li>
           <li class="links__link">
-            <p class="links__title"></p>
-            <a class="linsk__link" href="https://www.linkedin.com/in/germandolnikov/">German Dolnikov</a>
+            <p class="links__title">ВКонтакте</p>
+            <a class="linsk__link" href="https://vk.com/d1vvi">@d1vvi</a>
           </li>
           <li class="links__link">
-            <p class="links__title">Гит</p>
+            <p class="links__title">ГитХаб</p>
            <a class="linsk__link" href="https://github.com/d1vvix1117/">github.com/d1vvix1117/</a>
         </ul>
       </section>
@@ -47,26 +47,26 @@
         <h2 class="links__header">Чем занимаюсь вечером</h2>
         <ul class="links__container">
           <li class="links__link">
-            <p class="links__title">Снимаю</p>
-            <a class="linsk__link" href="https://www.youtube.com/@d1vvi/">www.youtube.com/@d1vvi</a>
+            <p class="links__title">Снимаю </p>
+            <a class="linsk__link" href="https://www.youtube.com/@d1vvi/">youtube</a>
           </li>
           <li class="links__link">
             <p class="links__title">Смотрю</p>
             <a class="linsk__link" href="https://www.kinopoisk.ru/mykp/folders/35054/?format=full">Кинопоиск</a>
           </li>
           <li class="links__link">
-            <p class="links__title">Создаю карту</p>
-            <a class="linsk__link" href="https://www.google.com/maps/d/edit?mid=1lVTPZVywL-fuG8musq09CWQWxcMS2FE0&ll=55.74698933198479%2C37.62036627521297&z=14">мест в Москве</a>
+            <p class="links__title">Создаю</p>
+            <a class="linsk__link" href="https://www.google.com/maps/d/u/0/edit?mid=1NddCIKYlg4s-4Ir9CY_drcJK8MIoUn4&usp=sharing">Карту путешествий</a>
           </li>
           <li class="links__link">
-            <p class="links__title">Пишу</p>
-            <a class="linsk__link" href="https://dolnikov.ru/blog/all/lichny-byudzhet/">про личный бюджет</a>
+            <p class="links__title">Общаюсь   </p>
+            <a class="linsk__link" href="https://discord.gg/JspvJ5rR">Discord</a>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <button type = "button" class="button-link" href=""> Кредо </button>
+      <button type = "button" class="button-link" href="">Кредо</button>
     </footer>
     <script type="text/javascript" src="js.js"></script>
   </body>
