--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </section>
     </main>
     <footer>
-      <button type = "button" class="button-link" href="">Лозунг</button>
+      <button type = "button" class="button-link" href="">Кредо</button>
     </footer>
     <script type="text/javascript" src="js.js"></script>
   </body>
